Fixed list page name too long problem

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -42,32 +42,26 @@ a:hover .header-profile-image {
   display: inline;
 }
 
-.home-jumbotron{
+/*.home-jumbotron{
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/modules/core/client/img/home-background.jpg);
   background-size: cover;
   background-position: center;
   height: 500px;
   font-style: oblique;
-  /*line-height: 500px;*/
 }
 
 .home-jumbotron div{
   color: white;
   font-size: 40px;
   font-family: Georgia, serif;
-  /*width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-62%, -50%);*/
   display:inline;
-  text-align:center; /* center horizontally */
-  vertical-align:middle; /* center vertically */
+  text-align:center;
+  vertical-align:middle;
 }
 
 .home-jumbotron .row:before{
   margin-top: 100px;
-}
+}*/
 
 section{
   margin-top: 20px;
@@ -135,3 +129,9 @@ section{
   margin-bottom: 10px;
 }
 
+.oneline-text
+{
+  white-space:nowrap;
+  overflow:hidden;
+  text-overflow:ellipsis;
+}
